--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
   "homepage": "https://github.com/lalaouil/flat-park-sf",
   "dependencies": {
     "body-parser": "^1.10.0",
+    "cookie-session": "^1.1.0",
     "ejs": "^1.0.0",
     "express": "^4.10.6",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
     "pg": "^4.1.1",
+    "request": "^2.51.0",
     "sequelize": "^2.0.0-rc3"
   }
 }
