--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/lalaouil/flat-park-sf",
   "dependencies": {
+    "bcrypt": "^0.8.0",
     "body-parser": "^1.10.0",
     "cookie-session": "^1.1.0",
     "ejs": "^1.0.0",
