--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
     "pg": "^4.1.1",
+    "pg-hstore": "^2.3.1",
     "request": "^2.51.0",
     "sequelize": "^2.0.0-rc3",
     "sequelize-cli": "^1.0.0"
